# atropos

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONFIG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  ROADMAP.md  debug_conv1d.py  debug_division_zero.py  debug_gpt2_layers.py  docker-compose.deploy.yml  docker-compose.yml  index.html  inspect_model.py  mkdocs.yml  pyproject.toml  requirements.txt  run-claude.cmd  search.html  sitemap.xml  test_arch_detection.py  test_baseline.json  test_check_sparsity.py  test_gpt2_prune_simple.py  test_model_structure.py  test_monkeypatch.py  test_sparsegpt_gpt2.py  test_wanda_failure.py  tmp.txt  validation_environment.yaml
.github/: pull_request_template.md
adoption_assessment_2026_04/: index.html
api/: index.html
async_rl_reproducibility_architecture/: index.html
base_env_incremental_migration/: index.html
base_env_runtime_audit_2026_04/: index.html
batch-error-handling/: index.html
benchmarks/: distributed_execution_benchmark.py  runtime_concurrency_benchmark.py  runtime_storage_benchmark.py
canonical-glossary/: index.html
canonical_trajectory_schema/: index.html
case-study/: index.html
cli/: index.html
cloud-cost-modeling/: index.html
cognitive_complexity_report_2026_04/: index.html
configs/: demo.yaml  models.yaml  quality_calibration.yaml  validation_suite.yaml
control_plane_concurrency_benchmark_results_2026_04/: index.html
control_plane_concurrency_race_summary_2026_04/: index.html
dashboard-guide/: index.html
data/: cloud_pricing_2026-04-06.json
deployment/: index.html
diagrams/: atropos_platform_dependency.mmd
doc-rewrite-plan/: index.html
docker/: Dockerfile.api  Dockerfile.worker
docs/: adoption_assessment_2026_04.md  api.md  async_rl_reproducibility_architecture.md  base_env_incremental_migration.md  base_env_runtime_audit_2026_04.md  batch-error-handling.md  canonical-glossary.md  canonical_trajectory_schema.md  case-study.md  cli.md  cloud-cost-modeling.md  cognitive_complexity_report_2026_04.md  control_plane_concurrency_benchmark_results_2026_04.md  control_plane_concurrency_race_summary_2026_04.md  dashboard-guide.md  deployment.md  doc-rewrite-plan.md  documentation_audit_2026_04.md  environment_variables.md  (+46 more)
examples/plugins/atropos-gsm8k-plugin/: pyproject.toml
examples/plugins/atropos-gsm8k-plugin/src/atropos_gsm8k_plugin/: __init__.py
(+386 files in other folders)
