[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atropos"
version = "0.2.0"
description = "Estimate performance, energy, cost, and break-even tradeoffs for pruning coding LLM deployments."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "OpenAI"}]
keywords = ["llm", "pruning", "quantization", "energy", "cost", "roi", "inference"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "PyYAML>=6.0",
  "torch>=2.0",
  "transformers>=4.40",
  "dash>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "mypy>=1.10",
  "build>=1.2.0",
  "types-PyYAML>=6.0.12",
]

[project.scripts]
atropos = "atropos.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --cov=atropos --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require external dependencies (skip in CI)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["external/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
packages = ["atropos"]
ignore_missing_imports = true
disable_error_code = ["unused-ignore"]
